fix overflow hidden

--- a/source/sass/_base.scss
+++ b/source/sass/_base.scss
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   font-family: "Roboto", Verdana, sans-serif;
   background: #fff;
   -webkit-font-smoothing: antialiased;
@@ -7,20 +8,23 @@ html, body {
 * {
   // box-sizing:border-box;
 }
-
 a {
   text-decoration: none;
   &:hover {
     text-decoration: none;
   }
 }
-
 ul {
   list-style: none;
   padding: 0;
   line-height: 1.8em;
 }
-
 .text-center {
   text-align: center;
+}
+@media screen and (max-width: 767px) {
+  html,
+  body {
+    overflow-x: hidden;
+  }
 }
